# ShinyGPT

./: .gitignore  manage.py  pyproject.toml
api_django/: apps.py  consumers.py  models.py  urls.py  views.py
api_django/migrations/: 0001_initial.py  0002_alter_conversation_user.py  0003_alter_conversation_user.py  0004_rename_model_name_conversation_gpt_model_name.py
components/: chat_data_processor.py  code_validation.py  config.py  docker_interface.py  lang_model_service.py
data/: hostnames  system_messages.toml
frontend_react/: package-lock.json  package.json
frontend_react/public/: index.html
frontend_react/src/: App.js  config.js  index.js  theme.js
frontend_react/src/components/: ChatOutput.js  ChatPrompt.js  CodeBlock.js  FastGPTChat.js  ModelSelector.js
manage_django/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
